syntax = "proto3";
package epp.host;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

enum HostStatus {
    ClientDeleteProhibited = 0;
    ClientUpdateProhibited = 1;
    Linked = 2;
    Ok = 3;
    PendingCreate = 4;
    PendingDelete = 5;
    PendingTransfer = 6;
    PendingUpdate = 7;
    ServerDeleteProhibited = 8;
    ServerUpdateProhibited = 9;
}

message HostCheckRequest {
    string name = 1;
    string registry_name = 2;
}

message HostCheckReply {
    bool available = 1;
    google.protobuf.StringValue reason = 2;
    common.CommandResponse cmd_resp = 3;
}

message HostInfoRequest {
    string name = 1;
    string registry_name = 2;
}

message HostInfoReply {
    string name = 1;
    string registry_id = 2;
    repeated HostStatus statuses = 3;
    repeated common.IPAddress addresses = 4;
    string client_id = 5;
    google.protobuf.StringValue client_created_id = 6;
    google.protobuf.Timestamp creation_date = 7;
    google.protobuf.StringValue last_updated_client = 8;
    google.protobuf.Timestamp last_updated_date = 9;
    google.protobuf.Timestamp last_transfer_date = 10;
    common.CommandResponse cmd_resp = 11;
}

message HostCreateRequest {
    string name = 1;
    repeated common.IPAddress addresses = 2;
    string registry_name = 3;
}

message HostCreateReply {
    reserved 4;
    string name = 1;
    bool pending = 2;
    google.protobuf.Timestamp creation_date = 3;
    common.CommandResponse cmd_resp = 5;
}

message HostDeleteRequest {
    string name = 1;
    string registry_name = 2;
}

message HostDeleteReply {
    reserved 2;
    bool pending = 1;
    common.CommandResponse cmd_resp = 3;
}

message HostUpdateRequest {
    message Param {
        oneof param {
            common.IPAddress address = 1;
            HostStatus state = 2;
        }
    }

    string name = 1;
    repeated Param add = 2;
    repeated Param remove = 3;
    google.protobuf.StringValue new_name = 4;
    string registry_name = 5;
}

message HostUpdateReply {
    reserved 2;
    bool pending = 1;
    common.CommandResponse cmd_resp = 3;
}